changed contact section

--- a/index.html
+++ b/index.html
@@ -239,15 +239,17 @@
                 <img src="./dist/img/gal1.jpg" alt="Gabinet dentytyczny" class='gallery__img' data-id="Technologia">
                 <img src="./dist/img/gal2.jpg" alt="Zadowolony pacjent" class='gallery__img' data-id="Opieka">
                 <img src="./dist/img/gal3.jpg" alt="Mikroskop" class='gallery__img' data-id="Technologia">
-                <img src="./dist/img/gal4.jpg" alt="Dyrektor naszej kliniki" class='gallery__img' data-id="Doświadczenie">
+                <img src="./dist/img/gal4.jpg" alt="Dyrektor naszej kliniki" class='gallery__img'
+                    data-id="Doświadczenie">
                 <img src="./dist/img/gal5.jpg" alt="Diagnoza" class='gallery__img' data-id="Opieka">
-                <img src="./dist/img/gal6.jpg" alt="Nowoczena sala operacyjna" class='gallery__img' data-id="Technologia">
+                <img src="./dist/img/gal6.jpg" alt="Nowoczena sala operacyjna" class='gallery__img'
+                    data-id="Technologia">
             </div>
         </section>
         <section id="contact" class="contact">
             <div class="wrapper">
                 <h2 class="contact__title">Kontakt</h2>
-                <h3 class="contact__postTitle">Masz pytnie? <span>Skontaktuj się </span> z nami</h3>
+                <h3 class="contact__postTitle">Nasze placówki</h3>
                 <div class="contact__box">
                     <div class="contact__box-left">
                         <div class="contact__box-item contact__box-item--one">
@@ -267,23 +269,25 @@
                             <p>adres@mailowy.pl</p>
                         </div>
                         <div class="contact__box-item contact__box-item--three">
-                            <h4 class="contact__box-city">Gdańsk</h4>
-                            <p>ul. Długa 1</p>
-                            <p>00-000, Gdańsk, Polska</p>
+                            <h4 class="contact__box-city">Kraków</h4>
+                            <p>ul. Wolna 111</p>
+                            <p>00-000, Kraków, Polska</p>
                             <p>+48 222 222 222</p>
                             <p>+48 333 333 333</p>
                             <p>adres@mailowy.pl</p>
                         </div>
                         <div class="contact__box-item contact__box-item--four">
-                            <h4 class="contact__box-city">Poznań</h4>
-                            <p>ul. Ptasia 21</p>
-                            <p>00-000, Poznań, Polska</p>
+                            <h4 class="contact__box-city">Gdańsk</h4>
+                            <p>ul. Jasna 1</p>
+                            <p>00-000, Gdańsk, Polska</p>
                             <p>+48 444 444 444</p>
                             <p>+48 555 555 555</p>
                             <p>adres@mailowy.pl</p>
                         </div>
                     </div>
+
                     <div class="contact__box-right">
+                        <h3 class="contact__postTitle">Masz pytnie? <span>Skontaktuj się </span> z nami</h3>
                         <form class="contact__form">
                             <div class="contact__form-cell">
                                 <label class="contact__form-label">Imię:</label>
@@ -310,14 +314,23 @@
                     </div>
                 </div>
             </div>
+
         </section>
+        <div class="contact__box-item contact__box-item--info">
+            <div class="wrapper">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat officiis tempore cupiditate beatae!
+                    Repellat harum repellendus quas, ea ad corrupti.</p>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+        </div>
     </main>
     <footer class="footer">
         <div class="wrapper">
             <div class="footer__box">
-                <!-- <a href="#" class="nav__logo"><i class="fab fa-medrt"></i>Med<span>Care</span></a> -->
-                <p class="footer__text">&copy; <span class="footer__year"></span> All Rights Reserved. <i
-                        class="fab fa-medrt"></i>Med<span>Care</span></p>
+                <p class="footer__text">&copy;
+                <p class="footer__year"></p> All Rights Reserved. <i class="fab fa-medrt"></i>Med<span>Care</span></p>
 
             </div>
         </div>
